--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -7,6 +7,12 @@
 		xmlns:ui="http://xmlns.jcp.org/jsf/facelets" 
 		template="/templates/template.xhtml">
 		
+		<dependency>
+		    <groupId>net.glxn</groupId>
+		    <artifactId>qrgen</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		
 	<ui:define name="cabecalho">
 		<ui:include src="/templates/cabecalho.xhtml" />
 	</ui:define>
@@ -17,7 +23,25 @@
 	</ui:define>
 	
 	<ui:define name="conteudo">
-	
+		<div style="text-align:center"></div>
+			<h3 align='center' >PartyMove</h3>
+			<p:contentFlow value="#{ImagesView.images}" var="image">
+			    <p:graphicImage name="images/#{image}" styleClass="content" />
+			    <div class="caption">Nossos serviços - #{image}</div>
+			</p:contentFlow>
+		<div align='center'></div>
+		
+		<style type="text/css">
+   		body .ui-panelgrid .ui-panelgrid-cell:last-child {
+        	background-color: #ffffff;
+    	}
+		</style>
+		
+		<p:panelGrid columns="2">
+		
+		<h:outputText value="QR" />
+    	<p:barcode value="0123456789" type="qr"/>
+    	</p:panelGrid>
 		
 	</ui:define>
 	
